[package]
name = "ltapiserv-rs"
version = "0.2.2"
edition = "2021"
license-file = "LICENSE"

[[bin]]
name = "ltapiserv-rs"
path = "src/server.rs"

[[bin]]
name = "ltapi-client"
path = "src/client.rs"
required-features = ["client"]

[dependencies]
ariadne = { version = "0.3.0", optional = true }
anyhow = "1.0.58"
axum = "0.5.13"
bincode = "1.3.3"
blake3 = "1.3.1"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.5.13", features = ["derive", "env", "wrap_help"] }
dirs = "4.0.0"
fern = { version = "0.6.1", features = ["colored"] }
flate2 = "1.0.24"
log = "0.4.17"
nlprule = "0.6.4"
regex = "1.6.0"
serde = "1.0.139"
serde_json = "1.0.82"
symspell = { version = "0.4.3", features = ["serde"] }
tar = "0.4.38"
tempfile = "3.3.0"
thiserror = "1.0.44"
tokio = { version = "1", features = ["full"] }
tower-http = {version = "0.4.1", features = ["cors"]}
unidecode = "0.3.0"
reqwest = { version = "0.11.18", optional = true, features = ["json", "rustls"], default-features = false }

[features]
default = ["client"]
client = ["dep:ariadne", "dep:reqwest"]

[profile.release]
incremental = true
lto = "off"
